fixed z-index bug on home button

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,7 +58,6 @@ html{
 }
 
 .home-btn {
-    z-index:9999999;
     position: absolute;
     display: block;
     left: 0;
